--- a/nav/styling.css
+++ b/nav/styling.css
@@ -1,7 +1,8 @@
 body { 
   margin: 0; 
   padding: 0; 
-  font-family: Arial, sans-serif;
+  background-color: #f4f1e3;
+  font-family: 'Goudy Old Style', 'Times New Roman', serif;
 }
 .header { 
   background-color: #f4f1e3;
@@ -40,4 +41,8 @@ body {
   color: #2c3e50;
   border-bottom: 2px solid #1abc9c;
   padding-bottom: 10px;
+}
+
+p{
+  font-size: 1.2em;
 }
