--- a/nav/styling.css
+++ b/nav/styling.css
@@ -27,11 +27,21 @@ body {
   background-color: #2c3e50;
   border-radius: 4px;
   transition: background-color 0.3s;
+  transition: 0.05s;
 }
 .nav a:hover { 
   background-color: #1abc9c; 
-  transition-duration: 0.5s;
+  transition-duration: 0.1s;
 }
+a{
+    transition-duration: 0.05s;
+}
+a:hover{
+  background-color: #1abc9c; 
+  color: white;
+  transition-duration: 0.1s;
+}
+
 .content { 
   padding: 20px; 
   background-color: white;
